// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainAllValues fails when given object contains all values including arrays 1`] = `
"expect(received).not.toContainAllValues(expected)

Expected object to not contain all values:
  [\\"duck\\", [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}]]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}]}"
`;

exports[`.not.toContainAllValues fails when given object contains all values including objects 1`] = `
"expect(received).not.toContainAllValues(expected)

Expected object to not contain all values:
  [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}, \\"duck\\"]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}}"
`;

exports[`.not.toContainAllValues fails when given object contains primitive values 1`] = `
"expect(received).not.toContainAllValues(expected)

Expected object to not contain all values:
  [\\"world\\", 0, false]
Received:
  {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}"
`;

exports[`.toContainAllValues fails when given object does not contain all primitive values 1`] = `
"expect(received).toContainAllValues(expected)

Expected object to contain all values:
  [\\"hello\\", 0, false]
Received:
  {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}"
`;

exports[`.toContainAllValues fails when given object does not contain all primitive values 2`] = `
"expect(received).toContainAllValues(expected)

Expected object to contain all values:
  [\\"world\\", 0]
Received:
  {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}"
`;

exports[`.toContainAllValues fails when given object does not contain all values including arrays 1`] = `
"expect(received).toContainAllValues(expected)

Expected object to contain all values:
  [\\"duck\\", [{\\"hello\\": \\"world\\"}]]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": [{\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}]}"
`;

exports[`.toContainAllValues fails when given object does not contain all values including objects 1`] = `
"expect(received).toContainAllValues(expected)

Expected object to contain all values:
  [{\\"hello\\": \\"world\\"}]
Received:
  {\\"donald\\": \\"duck\\", \\"message\\": {\\"bar\\": false, \\"foo\\": 0, \\"hello\\": \\"world\\"}}"
`;
